Add current user's credential to PS application